Console redirected to main DB